--- a/Medical_Images_Classifier.ipynb
+++ b/Medical_Images_Classifier.ipynb
@@ -223,7 +223,7 @@
         "id": "WuPgByhXRyO6",
         "outputId": "3405935d-e51a-46ec-e743-26d4ce7c66de"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,8 @@
             "633/633 - 511s - loss: 0.2544 - accuracy: 0.9682 - val_loss: 4.9157 - val_accuracy: 0.5789 - 511s/epoch - 807ms/step\n",
             "Epoch 9/10\n",
             "633/633 - 514s - loss: 0.0692 - accuracy: 0.9866 - val_loss: 2.8196 - val_accuracy: 0.6579 - 514s/epoch - 812ms/step\n",
-            "Epoch 10/10\n"
+            "Epoch 10/10\n",
+            "633/633 - 515s - loss: 0.0601 - accuracy: 0.9919 - val_loss: 2.7473 - val_accuracy: 0.7105 - 515s/epoch - 813ms/step\n"
           ]
         }
       ]
