--- a/Medical_Images_Classifier.ipynb
+++ b/Medical_Images_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhhNLq/hUZInA+r/XX9+TP",
+      "authorship_tag": "ABX9TyN8zUETeFvloJBtJHcOSY7q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,6 +73,7 @@
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
+        "from tensorflow.keras.preprocessing import image\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Conv2D, MaxPool2D, Flatten, Dense\n",
@@ -81,8 +82,6 @@
         "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "#%%matplotlib inline\n",
-        "\n",
         "import cv2\n"
       ],
       "metadata": {
@@ -859,9 +858,75 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Make prediction\n",
+        "\n",
+        "img = image.load_img('/content/gdrive/MyDrive/omdena_project/medical_images/test/COVID19/COVID19(558).jpg', target_size = (width, height))\n",
+        "img = image.img_to_array(img)\n",
+        "img = np.expand_dims(img, axis = 0)\n",
+        "\n",
+        "model_v2.predict(img)"
+      ],
+      "metadata": {
+        "id": "Bdv5RQszUd8L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "911edf24-b13a-4fb4-f46e-26e56024b55f"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 169ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[9.9929368e-01, 5.0018003e-05, 2.9783734e-04, 3.5850672e-04]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names"
+      ],
+      "metadata": {
+        "id": "B2gZ0LMxMYEF",
+        "outputId": "cbd08fdb-1e0c-4e34-a77e-1a3d9b582c09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['COVID19', 'NORMAL', 'PNEUMONIA', 'TURBERCULOSIS']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Bdv5RQszUd8L"
+        "id": "KBbmkZkvNCht"
       },
       "execution_count": null,
       "outputs": []
