--- a/Medical_Images_Classifier.ipynb
+++ b/Medical_Images_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8zUETeFvloJBtJHcOSY7q",
+      "authorship_tag": "ABX9TyPaC2AK6/emjgCEnZsscp9W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -561,6 +561,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We find that the model does not do well. This could be because there is not enough training data. We will try to generate more training data through data augmentation."
+      ],
+      "metadata": {
+        "id": "xXE0t0m_Nyi1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Create a variable to generate additional data for training through augmentation\n",
@@ -902,11 +911,11 @@
         "class_names"
       ],
       "metadata": {
-        "id": "B2gZ0LMxMYEF",
-        "outputId": "cbd08fdb-1e0c-4e34-a77e-1a3d9b582c09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B2gZ0LMxMYEF",
+        "outputId": "cbd08fdb-1e0c-4e34-a77e-1a3d9b582c09"
       },
       "execution_count": 30,
       "outputs": [
