--- a/Incident_Root_Cause_Analysis.ipynb
+++ b/Incident_Root_Cause_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNI+TXLtTmkNNTDa0+1Aknr",
+      "authorship_tag": "ABX9TyPaTnbezrWaTfwDJqcB11PE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,7 @@
       "source": [
         "# Import libraries\n",
         "\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -68,7 +69,7 @@
       "metadata": {
         "id": "L0j5kolSDy7z"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -309,9 +310,251 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "Y = to_categorical(Y, 3)\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.1)\n",
+        "\n",
+        "print(X_train.shape)\n",
+        "print(X_test.shape)\n",
+        "\n",
+        "print(y_train.shape)\n",
+        "print(y_test.shape)"
+      ],
+      "metadata": {
+        "id": "aJm7vk5-GXfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab358e3b-9f33-4ec3-9dc3-dd14e6d1b12e"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(900, 7)\n",
+            "(100, 7)\n",
+            "(900, 3)\n",
+            "(100, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EPOCHS = 20\n",
+        "BATCH_SIZE = 64\n",
+        "VERBOSE = 1\n",
+        "OUTPUT_CLASSES = len(label_encoder.classes_)\n",
+        "N_HIDDEN = 128\n",
+        "VALIDATION_SPLIT = 0.2\n",
+        "\n",
+        "model = Sequential()\n",
+        "model.add(Dense(N_HIDDEN, input_shape=(7,), name='Dense_Layer_1', activation='relu'))\n",
+        "model.add(Dense(N_HIDDEN, name='Dense_Layer_2', activation='relu'))\n",
+        "model.add(Dense(OUTPUT_CLASSES, name='Final_Layer', activation='softmax'))\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "model.summary()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M82ElLl5lmYg",
+        "outputId": "6054c507-5e41-4891-f1f5-1eaf176bded3"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " Dense_Layer_1 (Dense)       (None, 128)               1024      \n",
+            "                                                                 \n",
+            " Dense_Layer_2 (Dense)       (None, 128)               16512     \n",
+            "                                                                 \n",
+            " Final_Layer (Dense)         (None, 3)                 387       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 17,923\n",
+            "Trainable params: 17,923\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(X_train,\n",
+        "          y_train,\n",
+        "          batch_size=BATCH_SIZE,\n",
+        "          epochs=EPOCHS,\n",
+        "          verbose=VERBOSE,\n",
+        "          validation_split=VALIDATION_SPLIT)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NCGyve90m_Ky",
+        "outputId": "9d65cb27-3a46-4661-ccf8-bca3cb269cfc"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "12/12 [==============================] - 1s 20ms/step - loss: 0.9064 - accuracy: 0.7194 - val_loss: 0.7476 - val_accuracy: 0.8111\n",
+            "Epoch 2/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.6396 - accuracy: 0.8125 - val_loss: 0.5916 - val_accuracy: 0.8000\n",
+            "Epoch 3/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.5104 - accuracy: 0.8347 - val_loss: 0.5600 - val_accuracy: 0.7778\n",
+            "Epoch 4/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.4591 - accuracy: 0.8250 - val_loss: 0.5283 - val_accuracy: 0.8000\n",
+            "Epoch 5/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.4357 - accuracy: 0.8389 - val_loss: 0.5147 - val_accuracy: 0.8111\n",
+            "Epoch 6/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.4208 - accuracy: 0.8486 - val_loss: 0.5241 - val_accuracy: 0.8056\n",
+            "Epoch 7/20\n",
+            "12/12 [==============================] - 0s 5ms/step - loss: 0.4162 - accuracy: 0.8472 - val_loss: 0.5171 - val_accuracy: 0.8111\n",
+            "Epoch 8/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.4049 - accuracy: 0.8472 - val_loss: 0.5339 - val_accuracy: 0.7833\n",
+            "Epoch 9/20\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.3979 - accuracy: 0.8514 - val_loss: 0.5087 - val_accuracy: 0.7944\n",
+            "Epoch 10/20\n",
+            "12/12 [==============================] - 0s 4ms/step - loss: 0.3973 - accuracy: 0.8542 - val_loss: 0.5291 - val_accuracy: 0.8000\n",
+            "Epoch 11/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3894 - accuracy: 0.8542 - val_loss: 0.5137 - val_accuracy: 0.8222\n",
+            "Epoch 12/20\n",
+            "12/12 [==============================] - 0s 4ms/step - loss: 0.3867 - accuracy: 0.8486 - val_loss: 0.5253 - val_accuracy: 0.7944\n",
+            "Epoch 13/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3845 - accuracy: 0.8639 - val_loss: 0.5045 - val_accuracy: 0.8111\n",
+            "Epoch 14/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3787 - accuracy: 0.8694 - val_loss: 0.5223 - val_accuracy: 0.8056\n",
+            "Epoch 15/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3722 - accuracy: 0.8653 - val_loss: 0.4965 - val_accuracy: 0.8167\n",
+            "Epoch 16/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3697 - accuracy: 0.8556 - val_loss: 0.4931 - val_accuracy: 0.8167\n",
+            "Epoch 17/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3674 - accuracy: 0.8694 - val_loss: 0.4927 - val_accuracy: 0.8222\n",
+            "Epoch 18/20\n",
+            "12/12 [==============================] - 0s 4ms/step - loss: 0.3609 - accuracy: 0.8694 - val_loss: 0.4848 - val_accuracy: 0.8222\n",
+            "Epoch 19/20\n",
+            "12/12 [==============================] - 0s 4ms/step - loss: 0.3617 - accuracy: 0.8625 - val_loss: 0.4914 - val_accuracy: 0.8167\n",
+            "Epoch 20/20\n",
+            "12/12 [==============================] - 0s 6ms/step - loss: 0.3566 - accuracy: 0.8708 - val_loss: 0.4830 - val_accuracy: 0.8167\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f433491d8e0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(X_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xrObMDbDouIi",
+        "outputId": "e55f7bfa-1b03-4b33-fe9f-02bc13b65577"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4/4 [==============================] - 0s 7ms/step - loss: 0.4803 - accuracy: 0.8400\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.4802558422088623, 0.8399999737739563]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CPU_LOAD=1\n",
+        "MEMORY_LOAD=0\n",
+        "DELAY=0\n",
+        "ERROR_1000=0\n",
+        "ERROR_1001=1\n",
+        "ERROR_1002=1\n",
+        "ERROR_1003=0\n",
+        "\n",
+        "prediction = np.argmax(model.predict(\n",
+        "    [[CPU_LOAD,MEMORY_LOAD,DELAY,\n",
+        "      ERROR_1000,ERROR_1001,ERROR_1002,ERROR_1003]]), axis=1\n",
+        ")\n",
+        "\n",
+        "print(label_encoder.inverse_transform(prediction))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ztpv_aewnylz",
+        "outputId": "e9f7d8a5-3bec-4767-bd76-4b9fd8a926aa"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 109ms/step\n",
+            "[0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aJm7vk5-GXfd"
+        "id": "m1IDYSN3otRV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YEaJtVpUogab"
       },
       "execution_count": null,
       "outputs": []
