--- a/Incident_Root_Cause_Analysis.ipynb
+++ b/Incident_Root_Cause_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfY2N86RO6BjXx5byOMB0t",
+      "authorship_tag": "ABX9TyMpwtYY91K/RYgoSnfcFhmh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKUXpcWdBZeP",
-        "outputId": "ae318e93-51ba-4bdb-a9fa-5e9e7ed5a3d3"
+        "outputId": "be3b5bd4-3c80-451d-d0bb-e6e71128b57f"
       },
       "outputs": [
         {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "L0j5kolSDy7z"
       },
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
           "height": 250
         },
         "id": "whWnUOc0D-xv",
-        "outputId": "563273a7-63e1-4d5a-8451-f3980c6f2fac"
+        "outputId": "2e700b49-680e-4a00-e8c0-2e2077d33f8e"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +111,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ac679581-b23d-45a4-8c19-5572105447e5\">\n",
+              "  <div id=\"df-299415c8-697d-482c-84c4-d0e68a314572\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -206,7 +206,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ac679581-b23d-45a4-8c19-5572105447e5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-299415c8-697d-482c-84c4-d0e68a314572')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -257,12 +257,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ac679581-b23d-45a4-8c19-5572105447e5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-299415c8-697d-482c-84c4-d0e68a314572 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ac679581-b23d-45a4-8c19-5572105447e5');\n",
+              "          const element = document.querySelector('#df-299415c8-697d-482c-84c4-d0e68a314572');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -285,13 +285,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Convert label into numerical form\n",
         "label_encoder = LabelEncoder()\n",
         "df['ROOT_CAUSE'] = label_encoder.fit_transform(df['ROOT_CAUSE'])\n",
         "\n",
@@ -305,14 +306,16 @@
       "metadata": {
         "id": "vJmIcJgaF8rJ"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Convert Y to one-hot encoding\n",
         "Y = to_categorical(Y, 3)\n",
         "\n",
+        "# Split training and test data\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.1)\n",
         "\n",
         "print(X_train.shape)\n",
@@ -326,9 +329,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab358e3b-9f33-4ec3-9dc3-dd14e6d1b12e"
+        "outputId": "38156779-7636-4fc8-b589-a86d58a9ffd3"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,6 +348,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create keras sequential model\n",
         "EPOCHS = 20\n",
         "BATCH_SIZE = 64\n",
         "VERBOSE = 1\n",
@@ -367,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M82ElLl5lmYg",
-        "outputId": "6054c507-5e41-4891-f1f5-1eaf176bded3"
+        "outputId": "9e15fd21-553f-44ca-bedc-33c94b8730f1"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,65 +413,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NCGyve90m_Ky",
-        "outputId": "9d65cb27-3a46-4661-ccf8-bca3cb269cfc"
+        "outputId": "6b609e1a-8996-4dd7-df82-d92fdb991107"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "12/12 [==============================] - 1s 20ms/step - loss: 0.9064 - accuracy: 0.7194 - val_loss: 0.7476 - val_accuracy: 0.8111\n",
+            "12/12 [==============================] - 1s 35ms/step - loss: 0.9095 - accuracy: 0.6750 - val_loss: 0.7524 - val_accuracy: 0.7556\n",
             "Epoch 2/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.6396 - accuracy: 0.8125 - val_loss: 0.5916 - val_accuracy: 0.8000\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.6397 - accuracy: 0.8000 - val_loss: 0.6545 - val_accuracy: 0.7611\n",
             "Epoch 3/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.5104 - accuracy: 0.8347 - val_loss: 0.5600 - val_accuracy: 0.7778\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.5349 - accuracy: 0.8000 - val_loss: 0.5323 - val_accuracy: 0.8278\n",
             "Epoch 4/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.4591 - accuracy: 0.8250 - val_loss: 0.5283 - val_accuracy: 0.8000\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4912 - accuracy: 0.8208 - val_loss: 0.5121 - val_accuracy: 0.8111\n",
             "Epoch 5/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.4357 - accuracy: 0.8389 - val_loss: 0.5147 - val_accuracy: 0.8111\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4669 - accuracy: 0.8319 - val_loss: 0.4847 - val_accuracy: 0.8222\n",
             "Epoch 6/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.4208 - accuracy: 0.8486 - val_loss: 0.5241 - val_accuracy: 0.8056\n",
+            "12/12 [==============================] - 0s 8ms/step - loss: 0.4572 - accuracy: 0.8292 - val_loss: 0.5003 - val_accuracy: 0.8222\n",
             "Epoch 7/20\n",
-            "12/12 [==============================] - 0s 5ms/step - loss: 0.4162 - accuracy: 0.8472 - val_loss: 0.5171 - val_accuracy: 0.8111\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4442 - accuracy: 0.8403 - val_loss: 0.4705 - val_accuracy: 0.8278\n",
             "Epoch 8/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.4049 - accuracy: 0.8472 - val_loss: 0.5339 - val_accuracy: 0.7833\n",
+            "12/12 [==============================] - 0s 8ms/step - loss: 0.4395 - accuracy: 0.8431 - val_loss: 0.4785 - val_accuracy: 0.8278\n",
             "Epoch 9/20\n",
-            "12/12 [==============================] - 0s 7ms/step - loss: 0.3979 - accuracy: 0.8514 - val_loss: 0.5087 - val_accuracy: 0.7944\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4333 - accuracy: 0.8417 - val_loss: 0.4564 - val_accuracy: 0.8333\n",
             "Epoch 10/20\n",
-            "12/12 [==============================] - 0s 4ms/step - loss: 0.3973 - accuracy: 0.8542 - val_loss: 0.5291 - val_accuracy: 0.8000\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4332 - accuracy: 0.8375 - val_loss: 0.4508 - val_accuracy: 0.8333\n",
             "Epoch 11/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3894 - accuracy: 0.8542 - val_loss: 0.5137 - val_accuracy: 0.8222\n",
+            "12/12 [==============================] - 0s 9ms/step - loss: 0.4238 - accuracy: 0.8417 - val_loss: 0.4561 - val_accuracy: 0.8333\n",
             "Epoch 12/20\n",
-            "12/12 [==============================] - 0s 4ms/step - loss: 0.3867 - accuracy: 0.8486 - val_loss: 0.5253 - val_accuracy: 0.7944\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.4161 - accuracy: 0.8500 - val_loss: 0.4491 - val_accuracy: 0.8000\n",
             "Epoch 13/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3845 - accuracy: 0.8639 - val_loss: 0.5045 - val_accuracy: 0.8111\n",
+            "12/12 [==============================] - 0s 11ms/step - loss: 0.4140 - accuracy: 0.8458 - val_loss: 0.4491 - val_accuracy: 0.8111\n",
             "Epoch 14/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3787 - accuracy: 0.8694 - val_loss: 0.5223 - val_accuracy: 0.8056\n",
+            "12/12 [==============================] - 0s 13ms/step - loss: 0.4067 - accuracy: 0.8472 - val_loss: 0.4874 - val_accuracy: 0.8222\n",
             "Epoch 15/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3722 - accuracy: 0.8653 - val_loss: 0.4965 - val_accuracy: 0.8167\n",
+            "12/12 [==============================] - 0s 10ms/step - loss: 0.4002 - accuracy: 0.8431 - val_loss: 0.4265 - val_accuracy: 0.8222\n",
             "Epoch 16/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3697 - accuracy: 0.8556 - val_loss: 0.4931 - val_accuracy: 0.8167\n",
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.3990 - accuracy: 0.8514 - val_loss: 0.4357 - val_accuracy: 0.8278\n",
             "Epoch 17/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3674 - accuracy: 0.8694 - val_loss: 0.4927 - val_accuracy: 0.8222\n",
+            "12/12 [==============================] - 0s 8ms/step - loss: 0.3935 - accuracy: 0.8458 - val_loss: 0.4407 - val_accuracy: 0.8167\n",
             "Epoch 18/20\n",
-            "12/12 [==============================] - 0s 4ms/step - loss: 0.3609 - accuracy: 0.8694 - val_loss: 0.4848 - val_accuracy: 0.8222\n",
+            "12/12 [==============================] - 0s 11ms/step - loss: 0.3942 - accuracy: 0.8403 - val_loss: 0.4539 - val_accuracy: 0.8167\n",
             "Epoch 19/20\n",
-            "12/12 [==============================] - 0s 4ms/step - loss: 0.3617 - accuracy: 0.8625 - val_loss: 0.4914 - val_accuracy: 0.8167\n",
+            "12/12 [==============================] - 0s 9ms/step - loss: 0.3914 - accuracy: 0.8528 - val_loss: 0.4379 - val_accuracy: 0.8333\n",
             "Epoch 20/20\n",
-            "12/12 [==============================] - 0s 6ms/step - loss: 0.3566 - accuracy: 0.8708 - val_loss: 0.4830 - val_accuracy: 0.8167\n"
+            "12/12 [==============================] - 0s 7ms/step - loss: 0.3814 - accuracy: 0.8514 - val_loss: 0.4730 - val_accuracy: 0.8167\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f433491d8e0>"
+              "<keras.callbacks.History at 0x7fbf5c52e910>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 7
         }
       ]
     },
@@ -481,32 +485,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xrObMDbDouIi",
-        "outputId": "e55f7bfa-1b03-4b33-fe9f-02bc13b65577"
+        "outputId": "5d78fed8-727e-4bf9-fa0f-863c63742329"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4/4 [==============================] - 0s 7ms/step - loss: 0.4803 - accuracy: 0.8400\n"
+            "4/4 [==============================] - 0s 4ms/step - loss: 0.2859 - accuracy: 0.8900\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.4802558422088623, 0.8399999737739563]"
+              "[0.2858756184577942, 0.8899999856948853]"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 8
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Predict root cause\n",
         "CPU_LOAD=1\n",
         "MEMORY_LOAD=0\n",
         "DELAY=0\n",
@@ -526,16 +531,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ztpv_aewnylz",
-        "outputId": "3ddef3aa-4a17-4278-d7e6-2301e5dfeec6"
+        "outputId": "c23bff0e-08ef-44a6-8585-e4c733777b96"
       },
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 39ms/step\n",
-            "[0]\n"
+            "1/1 [==============================] - 0s 115ms/step\n",
+            "['DATABASE_ISSUE']\n"
           ]
         }
       ]
@@ -543,22 +548,31 @@
     {
       "cell_type": "code",
       "source": [
-        "print(prediction)"
+        "# Predict as a batch\n",
+        "print(label_encoder.inverse_transform(np.argmax(\n",
+        "    model.predict([[1,0,0,0,1,1,0],\n",
+        "                                [0,1,1,1,0,0,0],\n",
+        "                                [1,1,0,1,1,0,1],\n",
+        "                                [0,0,0,0,0,1,0],\n",
+        "                                [1,0,1,0,1,1,1]]), axis=1\n",
+        ")))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m1IDYSN3otRV",
-        "outputId": "de55b308-88f0-4fd3-b986-4d46b2485595"
+        "outputId": "24fcdd71-9db8-4fd5-9646-a331cb95fc00"
       },
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0]\n"
+            "1/1 [==============================] - 0s 35ms/step\n",
+            "['DATABASE_ISSUE' 'NETWORK_DELAY' 'MEMORY_LEAK' 'DATABASE_ISSUE'\n",
+            " 'DATABASE_ISSUE']\n"
           ]
         }
       ]
