--- a/CNN_Cifar10_Dataset.ipynb
+++ b/CNN_Cifar10_Dataset.ipynb
@@ -300,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czfOr0v2k-Tt",
-        "outputId": "2c8c491c-5082-4b38-986c-f1fb4546a101"
+        "outputId": "318358e4-5192-4297-97e0-27969ea99b17"
       },
       "execution_count": null,
       "outputs": [
@@ -309,7 +309,55 @@
           "name": "stdout",
           "text": [
             "Epoch 1/30\n",
-            "262/625 [===========>..................] - ETA: 2:07 - loss: 1.7805 - accuracy: 0.3415"
+            "625/625 [==============================] - 228s 363ms/step - loss: 1.5616 - accuracy: 0.4272 - val_loss: 1.2560 - val_accuracy: 0.5465\n",
+            "Epoch 2/30\n",
+            "625/625 [==============================] - 233s 372ms/step - loss: 1.1594 - accuracy: 0.5888 - val_loss: 1.0227 - val_accuracy: 0.6383\n",
+            "Epoch 3/30\n",
+            "625/625 [==============================] - 225s 360ms/step - loss: 0.9838 - accuracy: 0.6542 - val_loss: 0.8703 - val_accuracy: 0.6961\n",
+            "Epoch 4/30\n",
+            "625/625 [==============================] - 226s 362ms/step - loss: 0.8546 - accuracy: 0.6999 - val_loss: 0.7935 - val_accuracy: 0.7200\n",
+            "Epoch 5/30\n",
+            "625/625 [==============================] - 227s 363ms/step - loss: 0.7737 - accuracy: 0.7293 - val_loss: 0.7740 - val_accuracy: 0.7297\n",
+            "Epoch 6/30\n",
+            "625/625 [==============================] - 217s 348ms/step - loss: 0.7082 - accuracy: 0.7494 - val_loss: 0.7366 - val_accuracy: 0.7443\n",
+            "Epoch 7/30\n",
+            "625/625 [==============================] - 216s 346ms/step - loss: 0.6503 - accuracy: 0.7706 - val_loss: 0.6936 - val_accuracy: 0.7572\n",
+            "Epoch 8/30\n",
+            "625/625 [==============================] - 217s 348ms/step - loss: 0.6006 - accuracy: 0.7869 - val_loss: 0.6848 - val_accuracy: 0.7630\n",
+            "Epoch 9/30\n",
+            "625/625 [==============================] - 218s 349ms/step - loss: 0.5418 - accuracy: 0.8087 - val_loss: 0.6734 - val_accuracy: 0.7683\n",
+            "Epoch 10/30\n",
+            "625/625 [==============================] - 218s 349ms/step - loss: 0.5046 - accuracy: 0.8216 - val_loss: 0.6622 - val_accuracy: 0.7776\n",
+            "Epoch 11/30\n",
+            "625/625 [==============================] - 218s 348ms/step - loss: 0.4711 - accuracy: 0.8334 - val_loss: 0.6810 - val_accuracy: 0.7761\n",
+            "Epoch 12/30\n",
+            "625/625 [==============================] - 217s 348ms/step - loss: 0.4363 - accuracy: 0.8435 - val_loss: 0.6650 - val_accuracy: 0.7779\n",
+            "Epoch 13/30\n",
+            "625/625 [==============================] - 217s 347ms/step - loss: 0.4147 - accuracy: 0.8515 - val_loss: 0.6685 - val_accuracy: 0.7832\n",
+            "Epoch 14/30\n",
+            "625/625 [==============================] - 218s 349ms/step - loss: 0.3838 - accuracy: 0.8644 - val_loss: 0.6832 - val_accuracy: 0.7831\n",
+            "Epoch 15/30\n",
+            "625/625 [==============================] - 217s 348ms/step - loss: 0.3694 - accuracy: 0.8697 - val_loss: 0.6862 - val_accuracy: 0.7812\n",
+            "Epoch 16/30\n",
+            "625/625 [==============================] - 217s 348ms/step - loss: 0.3424 - accuracy: 0.8778 - val_loss: 0.6936 - val_accuracy: 0.7792\n",
+            "Epoch 17/30\n",
+            "625/625 [==============================] - 218s 349ms/step - loss: 0.3294 - accuracy: 0.8818 - val_loss: 0.7204 - val_accuracy: 0.7852\n",
+            "Epoch 18/30\n",
+            "625/625 [==============================] - 218s 349ms/step - loss: 0.3162 - accuracy: 0.8873 - val_loss: 0.7263 - val_accuracy: 0.7812\n",
+            "Epoch 19/30\n",
+            "625/625 [==============================] - 219s 351ms/step - loss: 0.2994 - accuracy: 0.8939 - val_loss: 0.7256 - val_accuracy: 0.7839\n",
+            "Epoch 20/30\n",
+            "625/625 [==============================] - 220s 351ms/step - loss: 0.2874 - accuracy: 0.8982 - val_loss: 0.7321 - val_accuracy: 0.7818\n",
+            "Epoch 21/30\n",
+            "625/625 [==============================] - 221s 353ms/step - loss: 0.2794 - accuracy: 0.8996 - val_loss: 0.7690 - val_accuracy: 0.7764\n",
+            "Epoch 22/30\n",
+            "625/625 [==============================] - 220s 352ms/step - loss: 0.2693 - accuracy: 0.9043 - val_loss: 0.7517 - val_accuracy: 0.7793\n",
+            "Epoch 23/30\n",
+            "625/625 [==============================] - 221s 354ms/step - loss: 0.2581 - accuracy: 0.9078 - val_loss: 0.7627 - val_accuracy: 0.7896\n",
+            "Epoch 24/30\n",
+            "625/625 [==============================] - 220s 351ms/step - loss: 0.2584 - accuracy: 0.9090 - val_loss: 0.7587 - val_accuracy: 0.7839\n",
+            "Epoch 25/30\n",
+            "509/625 [=======================>......] - ETA: 39s - loss: 0.2380 - accuracy: 0.9180"
           ]
         }
       ]
